--- a/_config.yml
+++ b/_config.yml
@@ -234,6 +234,7 @@ keep_files:
 plugins:
   - jekyll-archives
   - jekyll-email-protect
+  - jekyll-feed
   - jekyll-get-json
   - jekyll-imagemagick
   - jekyll-jupyter-notebook
