--- a/_config.yml
+++ b/_config.yml
@@ -126,8 +126,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: nonchalant thoughts # blog_name will be displayed in your blog page
+blog_description: things I think, but I might change my mind
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
@@ -137,7 +137,7 @@ pagination:
 
 related_blog_posts:
   enabled: true
-  max_related: 5
+  max_related: 3
 
 # Giscus comments (RECOMMENDED)
 # Follow instructions on https://giscus.app/ to setup for your repo to fill out the information below.
