--- a/_config.yml
+++ b/_config.yml
@@ -281,8 +281,8 @@ jekyll-archives:
     tag: "/blog/tag/:name/"
     category: "/blog/category/:name/"
 
-display_tags: ["society", "truth", "philosophy", "health", "free will"] # these tags will be displayed on the front page of your blog
-display_categories: ["observations"] # these categories will be displayed on the front page of your blog
+#display_tags: ["society", "truth", "philosophy", "health", "free will"] # these tags will be displayed on the front page of your blog
+#display_categories: ["observations"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
