--- a/.prettierignore
+++ b/.prettierignore
@@ -8,3 +8,13 @@ assets/js/search/*.js
 assets/plotly/demo.html
 lighthouse_results/**
 _posts/2015-10-20-math.md
+
+# Bibliography and citation files
+*.bib
+*.bibtex
+references.txt
+citations.txt
+
+# Generated files
+node_modules
+.git
